# apache-airflow-providers-clickhouse-alt

./: README.md  pyproject.toml  requirements.txt  setup.py
airflow/: __init__.py
airflow/providers/clickhouse/: __init__.py  __version__.py  get_provider_info.py
airflow/providers/clickhouse/hooks/: clickhouse.py
airflow/providers/clickhouse/operators/: clickhouse.py
src/airflow/providers/clickhouse/: get_provider_info.py
