[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-providers-clickhouse"
version = "0.0.1"
description = "Provider package apache-airflow-providers-clickhouse for Apache Airflow"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [
    { name = "", email = "loktionov.fdr@gmail.com" },
]
keywords = [
    "clickhouse",
    "airflow",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dynamic = [
    "dependencies",
]

[project.urls]
GitHub = "https://github.com/bryzgaloff/airflow-clickhouse-plugin"
Documentation = "https://github.com/bryzgaloff/airflow-clickhouse-plugin#airflow-clickhouse-plugin"
Changelog = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/releases"
Issues = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/issues"

[project.optional-dependencies]
"common.sql" = [
    "apache-airflow[common.sql]>=3.0.0,
    "apache-airflow-providers-common-sql>=1.3.0",  # introduces SQLExecuteQueryOperator
    "clickhouse-driver>=0.2.1",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true  # add directories without __init__.py
